--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
 /* this file is empty  */
 *{
-    background-color: rgba(255, 217, 0, 0.308);
+    /* background-color: rgba(255, 217, 0, 0.308); */
 }
+
+.mama{
+    /* border: 2px solid #1d0e0c; */
+    border-radius: 2rem;
+    background-color: #28282bf8;
+    text-align: center;
+    padding: 1rem;
+    margin: 2rem;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    font-weight: bold;
+    color: whitesmoke;
+    width: 500px;
+    height: fit-content;
+    display: inline-block;
+    /* box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px; */
+    box-shadow: 0px 9px 30px rgba(255, 145, 1, 0.651);
+    /* box-shadow: rgb(44, 62, 80) 0px -15px 15px -15px, rgb(44, 62, 80) 0px 15px 15px -15px; */
+}  
+.heading{
+    text-align: center;
+    text-decoration:underline;
+    
+}
+footer{text-align: center;
+font-weight: bold;}
