--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* this file is empty  */
-*{
-    /* background-color: rgba(255, 217, 0, 0.308); */
-}
+/* *{ background-color: rgba(255, 217, 0, 0.308); 
+} */
 
 .mama{
     /* border: 2px solid #1d0e0c; */
